# serializer version: 1
# name: test_create_agent_diagram
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model_request;
  	model_request --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.1
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopOne\2ebefore_model(NoopOne.before_model)
  	__end__([<p>__end__</p>]):::last
  	NoopOne\2ebefore_model --> model_request;
  	__start__ --> NoopOne\2ebefore_model;
  	model_request --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.10
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopTen\2ebefore_model(NoopTen.before_model)
  	NoopTen\2eafter_model(NoopTen.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopTen\2ebefore_model --> model_request;
  	__start__ --> NoopTen\2ebefore_model;
  	model_request --> NoopTen\2eafter_model;
  	NoopTen\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.11
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopTen\2ebefore_model(NoopTen.before_model)
  	NoopEleven\2ebefore_model(NoopEleven.before_model)
  	NoopTen\2eafter_model(NoopTen.after_model)
  	NoopEleven\2eafter_model(NoopEleven.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEleven\2eafter_model --> NoopTen\2eafter_model;
  	NoopEleven\2ebefore_model --> model_request;
  	NoopTen\2ebefore_model --> NoopEleven\2ebefore_model;
  	__start__ --> NoopTen\2ebefore_model;
  	model_request --> NoopEleven\2eafter_model;
  	NoopTen\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.2
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopOne\2ebefore_model(NoopOne.before_model)
  	NoopTwo\2ebefore_model(NoopTwo.before_model)
  	__end__([<p>__end__</p>]):::last
  	NoopOne\2ebefore_model --> NoopTwo\2ebefore_model;
  	NoopTwo\2ebefore_model --> model_request;
  	__start__ --> NoopOne\2ebefore_model;
  	model_request --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.3
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopOne\2ebefore_model(NoopOne.before_model)
  	NoopTwo\2ebefore_model(NoopTwo.before_model)
  	NoopThree\2ebefore_model(NoopThree.before_model)
  	__end__([<p>__end__</p>]):::last
  	NoopOne\2ebefore_model --> NoopTwo\2ebefore_model;
  	NoopThree\2ebefore_model --> model_request;
  	NoopTwo\2ebefore_model --> NoopThree\2ebefore_model;
  	__start__ --> NoopOne\2ebefore_model;
  	model_request --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.4
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopFour\2eafter_model(NoopFour.after_model)
  	__end__([<p>__end__</p>]):::last
  	__start__ --> model_request;
  	model_request --> NoopFour\2eafter_model;
  	NoopFour\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.5
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopFour\2eafter_model(NoopFour.after_model)
  	NoopFive\2eafter_model(NoopFive.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopFive\2eafter_model --> NoopFour\2eafter_model;
  	__start__ --> model_request;
  	model_request --> NoopFive\2eafter_model;
  	NoopFour\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.6
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopFour\2eafter_model(NoopFour.after_model)
  	NoopFive\2eafter_model(NoopFive.after_model)
  	NoopSix\2eafter_model(NoopSix.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopFive\2eafter_model --> NoopFour\2eafter_model;
  	NoopSix\2eafter_model --> NoopFive\2eafter_model;
  	__start__ --> model_request;
  	model_request --> NoopSix\2eafter_model;
  	NoopFour\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.7
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopSeven\2ebefore_model --> model_request;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopSeven\2eafter_model;
  	NoopSeven\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.8
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model --> model_request;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	NoopSeven\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_diagram.9
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopNine\2ebefore_model(NoopNine.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	NoopNine\2eafter_model(NoopNine.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model --> NoopNine\2ebefore_model;
  	NoopNine\2eafter_model --> NoopEight\2eafter_model;
  	NoopNine\2ebefore_model --> model_request;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopNine\2eafter_model;
  	NoopSeven\2eafter_model --> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[memory]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model_request;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model_request;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres_pipe]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model_request;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[postgres_pool]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model_request;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
# name: test_create_agent_jump[sqlite]
  '''
  ---
  config:
    flowchart:
      curve: linear
  ---
  graph TD;
  	__start__([<p>__start__</p>]):::first
  	model_request(model_request)
  	tools(tools)
  	NoopSeven\2ebefore_model(NoopSeven.before_model)
  	NoopEight\2ebefore_model(NoopEight.before_model)
  	NoopSeven\2eafter_model(NoopSeven.after_model)
  	NoopEight\2eafter_model(NoopEight.after_model)
  	__end__([<p>__end__</p>]):::last
  	NoopEight\2eafter_model --> NoopSeven\2eafter_model;
  	NoopEight\2ebefore_model -.-> __end__;
  	NoopEight\2ebefore_model -.-> model_request;
  	NoopSeven\2eafter_model -.-> NoopSeven\2ebefore_model;
  	NoopSeven\2eafter_model -.-> __end__;
  	NoopSeven\2eafter_model -.-> tools;
  	NoopSeven\2ebefore_model --> NoopEight\2ebefore_model;
  	__start__ --> NoopSeven\2ebefore_model;
  	model_request --> NoopEight\2eafter_model;
  	tools -.-> NoopSeven\2ebefore_model;
  	tools -.-> __end__;
  	classDef default fill:#f2f0ff,line-height:1.2
  	classDef first fill-opacity:0
  	classDef last fill:#bfb6fc
  
  '''
# ---
